--- a/Practice02/src/task03/config/task03.yaml
+++ b/Practice02/src/task03/config/task03.yaml
@@ -1,3 +1,4 @@
 /**:
   ros__parameters:
-    topic_name: "/spgc/receiver"
+    default_string: "No service available"
+    service_name: "/trigger_service"
